WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29242
[Qt] Assert hit when dropping a file in QtLauncher
https://bugs.webkit.org/show_bug.cgi?id=29242
Summary
[Qt] Assert hit when dropping a file in QtLauncher
Yael
Reported
2009-09-14 05:50:27 PDT
Assert is hit if the file path contains a space. The reason is that KURL can only accept escaped strings and the file name is not escaped. I checked on mac port, and the file name is escaped in DrapData::asURL()
Attachments
Patch
(1.15 KB, patch)
2009-09-14 05:56 PDT
,
Yael
vestbo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2009-09-14 05:56:50 PDT
Created
attachment 39541
[details]
Patch DropData::asURL() now encodes the URL before returning it.
Yael
Comment 2
2009-09-14 08:37:37 PDT
Landed in
r48354
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug