[Qt] Assert hit when dropping a file in QtLauncher https://bugs.webkit.org/show_bug.cgi?id=29242

Patch by Yael Aharon <yael.aharon@nokia.com> on 2009-09-14
Reviewed by Tor Arne Vestbø.

Qt's implementation of DropData::asURL does not return a URL encoded string
as expected.

* platform/qt/DragDataQt.cpp:


Canonical link: https://commits.webkit.org/39923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48354 268f45cc-cd09-0410-ab3c-d52691b4dbfc